--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "workspace",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "public/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start":"node public/app.js"
   },
   "keywords": [],
   "author": "",
