--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "workspace",
   "version": "1.0.0",
-  "main": "server.js", // You can update this as well
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js" // Change this line
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
